--- a/.drone.yml
+++ b/.drone.yml
@@ -1,14 +1,14 @@
-﻿kind: pipeline
+kind: pipeline
 type: docker
 name: integration
-
+ 
 steps:
-  - name: build
-    image: mcr.microsoft.com/dotnet/sdk
-    commands:
-      - dotnet build
-
-  - name: test
-    image: mcr.microsoft.com/dotnet/sdk
-    commands:
-      - dotnet test
+    - name: build
+      image: mcr.microsoft.com/dotnet/sdk
+      commands:
+        - dotnet build
+ 
+    - name: test
+      image: mcr.microsoft.com/dotnet/sdk:7.0
+      commands:
+        - dotnet test
